<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/location_default"
        android:inputType="text"
        android:key="@string/location_key"
        android:singleLine="true"
        android:title="@string/location_label" />

    <ListPreference
        android:defaultValue="@string/metric_value"
        android:entries="@array/unit"
        android:entryValues="@array/value"
        android:key="@string/temperature_key"
        android:title="@string/temperature_lable" />

    <CheckBoxPreference
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />
</PreferenceScreen>